--- a/ProAcc/Asset/MailTemplate/T2.HTML
+++ b/ProAcc/Asset/MailTemplate/T2.HTML
@@ -37,7 +37,7 @@
         &nbsp;</div>
     <span style="font-family: Arial; font-size: 10pt">Hello <b>{ManagerName}</b>,<br />
         <br />
-        A task can be started in the <b>{PhaseName}</b>  Phase  <br />
+        A task can be started in the <b>{PhaseName}</b>  Phase with project {projectName} and Instance {InstanceName} <br />
         <br />
         Do find the details below<br />
         <br />
