--- a/ProAcc/Asset/MailTemplate/T4.HTML
+++ b/ProAcc/Asset/MailTemplate/T4.HTML
@@ -37,7 +37,7 @@
         &nbsp;</div>
     <span style="font-family: Arial; font-size: 10pt">Hello <b>{ManagerName}</b>,<br />
         <br />
-        A Task has been <b>Realesed</b> from Hold in the <b>{PhaseName}</b>  Phase with project <b>{projectName}</b> and Instance <b>{InstanceName}</b> <br />
+        A Task has been <b>Released</b> from Hold in the <b>{PhaseName}</b>  Phase with project <b>{projectName}</b> and Instance <b>{InstanceName}</b> <br />
         <br />
         
         <table id="t01">
