--- a/ProAcc/Asset/MailTemplate/T5.HTML
+++ b/ProAcc/Asset/MailTemplate/T5.HTML
@@ -35,9 +35,9 @@
     <br />
     <div style="border-top: 3px solid #22BCE5">
         &nbsp;</div>
-    <span style="font-family: Arial; font-size: 10pt">Hello <b>Name</b>,<br />
+    <span style="font-family: Arial; font-size: 10pt">Hello <b>Team</b>,<br />
         <br />
-        Welcome 
+        User have submited the Questionnaire from <u>{MailId}</u>, Kindly do needful
         <br />
         
         
