Issue track, mail and Instance in all phases

--- a/ProAcc/Asset/MailTemplate/T6.HTML
+++ b/ProAcc/Asset/MailTemplate/T6.HTML
@@ -38,10 +38,19 @@
     <span style="font-family: Arial; font-size: 10pt">
         Hello <b>{Name}</b>,<br />
         <br />
-        New Issue <b>{IssueName}</b> from <b>{PhaseName}</b> Phase with project <b>{projectName}</b> and Instance <b>{InstanceName}</b> is assigned to you
+        New Issue from <b>{PhaseName}</b> Phase with project <b>{projectName}</b> and Instance <b>{InstanceName}</b> is assigned to you
+
         <br />
-
-
+        <table id="t01">
+            <tr>
+                <td>IssueName</td>
+                <td>{IssueName}</td>
+            </tr>
+            <tr>
+                <td>Phase Name</td>
+                <td>{PhaseName}</td>
+            </tr>
+        </table>
         <br />
         Thanks,<br />
         <b>ProAcc</b>
