Mail and EST hrs

--- a/ProAcc/Asset/MailTemplate/T7.html
+++ b/ProAcc/Asset/MailTemplate/T7.html
@@ -36,10 +36,10 @@
         &nbsp;
     </div>
     <span style="font-family: Arial; font-size: 10pt">
-        Hello <b>Name</b>,<br />
+        Hello <b>{Name}</b>,<br />
         <br />
-        Test for send customer mail
-       
+        Please click <a href="http://123.176.34.15:8021/survey/">here</a> to start survey
+        <br />
         <br />
         Thanks,<br />
         <b>ProAcc</b>
