--- a/ProAcc/Asset/MailTemplate/T7.html
+++ b/ProAcc/Asset/MailTemplate/T7.html
@@ -38,7 +38,12 @@
     <span style="font-family: Arial; font-size: 10pt">
         Hello <b>{Name}</b>,<br />
         <br />
-        Please click <a href="http://123.176.34.15:8021/survey/">here</a> to start survey
+
+        We would like to get a confirmation with you! Please click <a href="http://123.176.34.15:8021/survey/">here</a> for registration to our questionnaries.
+        <br />
+        <br />
+        Good luck! Hope it works.
+
         <br />
         <br />
         Thanks,<br />
