Added Views from RDC

--- a/ProAcc/Asset/MailTemplate/T7.html
+++ b/ProAcc/Asset/MailTemplate/T7.html
@@ -39,11 +39,9 @@
         Hello <b>{Name}</b>,<br />
         <br />
 
-        We would like to get a confirmation with you! Please click <a href="http://123.176.34.15:8021/survey/">here</a> for registration to our questionnaries.
-        <br />
-        <br />
-        Good luck! Hope it works.
-
+        We would like to get a confirmation from you!<br />
+        Kindly click <a href="http://123.176.34.15:8021/survey/"><b>here</b></a> for registration to our <b>questionnaries</b>.
+        
         <br />
         <br />
         Thanks,<br />
